# garnix-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: cli.rs  error.rs  git.rs  lib.rs  main.rs  matcher.rs  nix.rs
src/config/: parser.rs  types.rs
tests/fixtures/: sample_garnix.yaml
