[package]
name = "garnix-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for running Garnix-compatible nix builds locally"
authors = ["garnix.io"]
license = "MIT"

[[bin]]
name = "garnix"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
git2 = "0.18"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "process", "io-util", "macros"] }
colored = "2.0"
glob = "0.3"

[dev-dependencies]
tempfile = "3.8"